<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/layout_dialog_list"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_radio_button_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:ellipsize="marquee"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="#7d95cd"
        android:textSize="20sp" />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="#7d95cd" />

    <ListView
        android:id="@+id/dialog_radio_button_list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:cacheColorHint="@android:color/transparent"
        android:divider="#dcdcd7"
        android:dividerHeight="1dp"
        android:listSelector="@android:color/transparent"
        android:paddingLeft="1dp"
        android:paddingRight="1dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_btn_bg"
        android:padding="10dp" >

        <Button
            android:id="@+id/dialog_radio_button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_popup"
            android:text="@string/cancel"
            android:textColor="@drawable/selector_dialog_bottom_btn_txt"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dialog_radio_button_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_popup"
            android:text="@string/ok"
            android:textColor="@drawable/selector_dialog_bottom_btn_txt"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
